Added code so if you started a save beforer the leader fix, leader get regenerated

--- a/1.1/Source/VFE_Settlers.csproj
+++ b/1.1/Source/VFE_Settlers.csproj
@@ -76,6 +76,7 @@
     <Compile Include="JobDrivers\JobDriver_TakeChemshineOutOfChemshineBarrel.cs" />
     <Compile Include="JobGivers\JobGiver_Chemshined.cs" />
     <Compile Include="JobDrivers\JobDriver_PlayFiveFingerFillet.cs" />
+    <Compile Include="MapComponent_LeaderFixOnOngoingSave.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\ModSettings.cs" />
     <Compile Include="SitePartWorkers\SitePartWorker_SpawnWanted.cs" />
